Extend hooks more
